@@ -165,13 +165,14 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <!--
         <configuration>
           <argLine>
-          @{jaCoCoArgLine} add-opens gr2116.RESTservice/gr2116.restapi=ALL-UNNAMED
+            @{jaCoCoArgLine} 
+            --add-opens gr2116.RESTservice/gr2116.RESTservice.restapi=ALL-UNNAMED 
+            --add-opens gr2116.RESTservice/gr2116.RESTservice.restserver=ALL-UNNAMED
           </argLine>
       </configuration>
-    -->
+    
       </plugin>
 
       <!-- run checkstyle plugin -->
@@ -180,16 +181,18 @@
         <artifactId>maven-checkstyle-plugin</artifactId>
       </plugin>
 
-      <!-- run spotbugs plugin 
       <plugin>
         <groupId>com.github.spotbugs</groupId>
         <artifactId>spotbugs-maven-plugin</artifactId>
-      </plugin> -->
+      </plugin>
 
       <!-- JaCoCo for Maven test coverage --> 
       <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
+        <configuration>
+          <propertyName>jaCoCoArgLine</propertyName>
+        </configuration>
       </plugin>
     </plugins>
   </build>
